tests/negative/m34_incompatible_parameters.c
int collect(int value);
int collect(int value, ...);
int main(void) { return collect(1); }
